force-app/src/objects/FontevaPay__Stripe_Webhook_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>FontevaPay__Default_Tolerance__c</fullName>
        <label>Default Tolerance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Expected_Scheme__c</fullName>
        <label>Expected Scheme</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stripe Webhook Config</label>
    <pluralLabel>Stripe Webhook Configs</pluralLabel>
</CustomObject>